@startuml

title __MEDICALRECORDAPP's Class Diagram__\n

  namespace  {
    namespace om.example.medicalrecordapp {
      class com.example.medicalrecordapp.Date {
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      class com.example.medicalrecordapp.Main {
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      class com.example.medicalrecordapp.PatientRecord {
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      abstract class com.example.medicalrecordapp.RecordTemplate {
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      class com.example.medicalrecordapp.StaffRecord {
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      namespace controller {
        class com.example.medicalrecordapp.controller.AddPatientController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      namespace controller {
        class com.example.medicalrecordapp.controller.AddStaffController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      namespace controller {
        class com.example.medicalrecordapp.controller.ChooseController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      namespace controller {
        class com.example.medicalrecordapp.controller.ListController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      namespace controller {
        class com.example.medicalrecordapp.controller.LoginController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      namespace controller {
        class com.example.medicalrecordapp.controller.MainController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      namespace controller {
        class com.example.medicalrecordapp.controller.RemoveController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.medicalrecordapp {
      namespace controller {
        class com.example.medicalrecordapp.controller.ViewController {
        }
      }
    }
  }
  

  com.example.medicalrecordapp.Main -up-|> javafx.application.Application
  com.example.medicalrecordapp.PatientRecord -up-|> com.example.medicalrecordapp.RecordTemplate
  com.example.medicalrecordapp.RecordTemplate o-- com.example.medicalrecordapp.Date : birth
  com.example.medicalrecordapp.RecordTemplate o-- com.example.medicalrecordapp.Date : dateAdmitted
  com.example.medicalrecordapp.StaffRecord -up-|> com.example.medicalrecordapp.RecordTemplate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
